Fixed small spacing issue when you had no leagues

--- a/server/static/css/theme.css
+++ b/server/static/css/theme.css
@@ -146,3 +146,7 @@
   margin-top: 10px;
   text-align: center;
 }
+
+.no-margin {
+  margin: 0px;
+}
